--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -195,3 +195,66 @@ archivePrefix = {arXiv},
   journal = {GitLab repository},
   url = {https://gitlab.com/aplavin/InterferometricModels.jl}
 }
+
+@ARTICLE{EHTCIV,
+       author = {{Event Horizon Telescope Collaboration} and {Akiyama}, Kazunori and {Alberdi}, Antxon and {Alef}, Walter and {Asada}, Keiichi and {Azulay}, Rebecca and {Baczko}, Anne-Kathrin and {Ball}, David and {Balokovi{\'c}}, Mislav and {Barrett}, John and {Bintley}, Dan and {Blackburn}, Lindy and {Boland}, Wilfred and {Bouman}, Katherine L. and {Bower}, Geoffrey C. and {Bremer}, Michael and {Brinkerink}, Christiaan D. and {Brissenden}, Roger and {Britzen}, Silke and {Broderick}, Avery E. and {Broguiere}, Dominique and {Bronzwaer}, Thomas and {Byun}, Do-Young and {Carlstrom}, John E. and {Chael}, Andrew and {Chan}, Chi-kwan and {Chatterjee}, Shami and {Chatterjee}, Koushik and {Chen}, Ming-Tang and {Chen}, Yongjun and {Cho}, Ilje and {Christian}, Pierre and {Conway}, John E. and {Cordes}, James M. and {Crew}, Geoffrey B. and {Cui}, Yuzhu and {Davelaar}, Jordy and {De Laurentis}, Mariafelicia and {Deane}, Roger and {Dempsey}, Jessica and {Desvignes}, Gregory and {Dexter}, Jason and {Doeleman}, Sheperd S. and {Eatough}, Ralph P. and {Falcke}, Heino and {Fish}, Vincent L. and {Fomalont}, Ed and {Fraga-Encinas}, Raquel and {Freeman}, William T. and {Friberg}, Per and {Fromm}, Christian M. and {G{\'o}mez}, Jos{\'e} L. and {Galison}, Peter and {Gammie}, Charles F. and {Garc{\'\i}a}, Roberto and {Gentaz}, Olivier and {Georgiev}, Boris and {Goddi}, Ciriaco and {Gold}, Roman and {Gu}, Minfeng and {Gurwell}, Mark and {Hada}, Kazuhiro and {Hecht}, Michael H. and {Hesper}, Ronald and {Ho}, Luis C. and {Ho}, Paul and {Honma}, Mareki and {Huang}, Chih-Wei L. and {Huang}, Lei and {Hughes}, David H. and {Ikeda}, Shiro and {Inoue}, Makoto and {Issaoun}, Sara and {James}, David J. and {Jannuzi}, Buell T. and {Janssen}, Michael and {Jeter}, Britton and {Jiang}, Wu and {Johnson}, Michael D. and {Jorstad}, Svetlana and {Jung}, Taehyun and {Karami}, Mansour and {Karuppusamy}, Ramesh and {Kawashima}, Tomohisa and {Keating}, Garrett K. and {Kettenis}, Mark and {Kim}, Jae-Young and {Kim}, Junhan and {Kim}, Jongsoo and {Kino}, Motoki and {Koay}, Jun Yi and {Koch}, Patrick M. and {Koyama}, Shoko and {Kramer}, Michael and {Kramer}, Carsten and {Krichbaum}, Thomas P. and {Kuo}, Cheng-Yu and {Lauer}, Tod R. and {Lee}, Sang-Sung and {Li}, Yan-Rong and {Li}, Zhiyuan and {Lindqvist}, Michael and {Liu}, Kuo and {Liuzzo}, Elisabetta and {Lo}, Wen-Ping and {Lobanov}, Andrei P. and {Loinard}, Laurent and {Lonsdale}, Colin and {Lu}, Ru-Sen and {MacDonald}, Nicholas R. and {Mao}, Jirong and {Markoff}, Sera and {Marrone}, Daniel P. and {Marscher}, Alan P. and {Mart{\'\i}-Vidal}, Iv{\'a}n and {Matsushita}, Satoki and {Matthews}, Lynn D. and {Medeiros}, Lia and {Menten}, Karl M. and {Mizuno}, Yosuke and {Mizuno}, Izumi and {Moran}, James M. and {Moriyama}, Kotaro and {Moscibrodzka}, Monika and {M{\"u}ller}, Cornelia and {Nagai}, Hiroshi and {Nagar}, Neil M. and {Nakamura}, Masanori and {Narayan}, Ramesh and {Narayanan}, Gopal and {Natarajan}, Iniyan and {Neri}, Roberto and {Ni}, Chunchong and {Noutsos}, Aristeidis and {Okino}, Hiroki and {Olivares}, H{\'e}ctor and {Oyama}, Tomoaki and {{\"O}zel}, Feryal and {Palumbo}, Daniel C.~M. and {Patel}, Nimesh and {Pen}, Ue-Li and {Pesce}, Dominic W. and {Pi{\'e}tu}, Vincent and {Plambeck}, Richard and {PopStefanija}, Aleksandar and {Porth}, Oliver and {Prather}, Ben and {Preciado-L{\'o}pez}, Jorge A. and {Psaltis}, Dimitrios and {Pu}, Hung-Yi and {Ramakrishnan}, Venkatessh and {Rao}, Ramprasad and {Rawlings}, Mark G. and {Raymond}, Alexander W. and {Rezzolla}, Luciano and {Ripperda}, Bart and {Roelofs}, Freek and {Rogers}, Alan and {Ros}, Eduardo and {Rose}, Mel and {Roshanineshat}, Arash and {Rottmann}, Helge and {Roy}, Alan L. and {Ruszczyk}, Chet and {Ryan}, Benjamin R. and {Rygl}, Kazi L.~J. and {S{\'a}nchez}, Salvador and {S{\'a}nchez-Arguelles}, David and {Sasada}, Mahito and {Savolainen}, Tuomas and {Schloerb}, F. Peter and {Schuster}, Karl-Friedrich and {Shao}, Lijing and {Shen}, Zhiqiang and {Small}, Des and {Sohn}, Bong Won and {SooHoo}, Jason and {Tazaki}, Fumie and {Tiede}, Paul and {Tilanus}, Remo P.~J. and {Titus}, Michael and {Toma}, Kenji and {Torne}, Pablo and {Trent}, Tyler and {Trippe}, Sascha and {Tsuda}, Shuichiro and {van Bemmel}, Ilse and {van Langevelde}, Huib Jan and {van Rossum}, Daniel R. and {Wagner}, Jan and {Wardle}, John and {Weintroub}, Jonathan and {Wex}, Norbert and {Wharton}, Robert and {Wielgus}, Maciek and {Wong}, George N. and {Wu}, Qingwen and {Young}, Andr{\'e} and {Young}, Ken and {Younsi}, Ziri and {Yuan}, Feng and {Yuan}, Ye-Fei and {Zensus}, J. Anton and {Zhao}, Guangyao and {Zhao}, Shan-Shan and {Zhu}, Ziyan and {Farah}, Joseph R. and {Meyer-Zhao}, Zheng and {Michalik}, Daniel and {Nadolski}, Andrew and {Nishioka}, Hiroaki and {Pradel}, Nicolas and {Primiani}, Rurik A. and {Souccar}, Kamal and {Vertatschitsch}, Laura and {Yamaguchi}, Paul},
+        title = "{First M87 Event Horizon Telescope Results. IV. Imaging the Central Supermassive Black Hole}",
+      journal = {\apjl},
+     keywords = {black hole physics, galaxies: individual: M87, galaxies: jets, techniques: high angular resolution, techniques: image processing, techniques: interferometric, Astrophysics - Astrophysics of Galaxies, Astrophysics - Instrumentation and Methods for Astrophysics, General Relativity and Quantum Cosmology},
+         year = 2019,
+        month = apr,
+       volume = {875},
+       number = {1},
+          eid = {L4},
+        pages = {L4},
+          doi = {10.3847/2041-8213/ab0e85},
+archivePrefix = {arXiv},
+       eprint = {1906.11241},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...875L...4E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
+@ARTICLE{EHTCVI,
+       author = {{Event Horizon Telescope Collaboration} and {Akiyama}, Kazunori and {Alberdi}, Antxon and {Alef}, Walter and {Asada}, Keiichi and {Azulay}, Rebecca and {Baczko}, Anne-Kathrin and {Ball}, David and {Balokovi{\'c}}, Mislav and {Barrett}, John and {Bintley}, Dan and {Blackburn}, Lindy and {Boland}, Wilfred and {Bouman}, Katherine L. and {Bower}, Geoffrey C. and {Bremer}, Michael and {Brinkerink}, Christiaan D. and {Brissenden}, Roger and {Britzen}, Silke and {Broderick}, Avery E. and {Broguiere}, Dominique and {Bronzwaer}, Thomas and {Byun}, Do-Young and {Carlstrom}, John E. and {Chael}, Andrew and {Chan}, Chi-kwan and {Chatterjee}, Shami and {Chatterjee}, Koushik and {Chen}, Ming-Tang and {Chen}, Yongjun and {Cho}, Ilje and {Christian}, Pierre and {Conway}, John E. and {Cordes}, James M. and {Crew}, Geoffrey B. and {Cui}, Yuzhu and {Davelaar}, Jordy and {De Laurentis}, Mariafelicia and {Deane}, Roger and {Dempsey}, Jessica and {Desvignes}, Gregory and {Dexter}, Jason and {Doeleman}, Sheperd S. and {Eatough}, Ralph P. and {Falcke}, Heino and {Fish}, Vincent L. and {Fomalont}, Ed and {Fraga-Encinas}, Raquel and {Friberg}, Per and {Fromm}, Christian M. and {G{\'o}mez}, Jos{\'e} L. and {Galison}, Peter and {Gammie}, Charles F. and {Garc{\'\i}a}, Roberto and {Gentaz}, Olivier and {Georgiev}, Boris and {Goddi}, Ciriaco and {Gold}, Roman and {Gu}, Minfeng and {Gurwell}, Mark and {Hada}, Kazuhiro and {Hecht}, Michael H. and {Hesper}, Ronald and {Ho}, Luis C. and {Ho}, Paul and {Honma}, Mareki and {Huang}, Chih-Wei L. and {Huang}, Lei and {Hughes}, David H. and {Ikeda}, Shiro and {Inoue}, Makoto and {Issaoun}, Sara and {James}, David J. and {Jannuzi}, Buell T. and {Janssen}, Michael and {Jeter}, Britton and {Jiang}, Wu and {Johnson}, Michael D. and {Jorstad}, Svetlana and {Jung}, Taehyun and {Karami}, Mansour and {Karuppusamy}, Ramesh and {Kawashima}, Tomohisa and {Keating}, Garrett K. and {Kettenis}, Mark and {Kim}, Jae-Young and {Kim}, Junhan and {Kim}, Jongsoo and {Kino}, Motoki and {Koay}, Jun Yi and {Koch}, Patrick M. and {Koyama}, Shoko and {Kramer}, Michael and {Kramer}, Carsten and {Krichbaum}, Thomas P. and {Kuo}, Cheng-Yu and {Lauer}, Tod R. and {Lee}, Sang-Sung and {Li}, Yan-Rong and {Li}, Zhiyuan and {Lindqvist}, Michael and {Liu}, Kuo and {Liuzzo}, Elisabetta and {Lo}, Wen-Ping and {Lobanov}, Andrei P. and {Loinard}, Laurent and {Lonsdale}, Colin and {Lu}, Ru-Sen and {MacDonald}, Nicholas R. and {Mao}, Jirong and {Markoff}, Sera and {Marrone}, Daniel P. and {Marscher}, Alan P. and {Mart{\'\i}-Vidal}, Iv{\'a}n and {Matsushita}, Satoki and {Matthews}, Lynn D. and {Medeiros}, Lia and {Menten}, Karl M. and {Mizuno}, Yosuke and {Mizuno}, Izumi and {Moran}, James M. and {Moriyama}, Kotaro and {Moscibrodzka}, Monika and {M{\"u}ller}, Cornelia and {Nagai}, Hiroshi and {Nagar}, Neil M. and {Nakamura}, Masanori and {Narayan}, Ramesh and {Narayanan}, Gopal and {Natarajan}, Iniyan and {Neri}, Roberto and {Ni}, Chunchong and {Noutsos}, Aristeidis and {Okino}, Hiroki and {Olivares}, H{\'e}ctor and {Oyama}, Tomoaki and {{\"O}zel}, Feryal and {Palumbo}, Daniel C.~M. and {Patel}, Nimesh and {Pen}, Ue-Li and {Pesce}, Dominic W. and {Pi{\'e}tu}, Vincent and {Plambeck}, Richard and {PopStefanija}, Aleksandar and {Porth}, Oliver and {Prather}, Ben and {Preciado-L{\'o}pez}, Jorge A. and {Psaltis}, Dimitrios and {Pu}, Hung-Yi and {Ramakrishnan}, Venkatessh and {Rao}, Ramprasad and {Rawlings}, Mark G. and {Raymond}, Alexander W. and {Rezzolla}, Luciano and {Ripperda}, Bart and {Roelofs}, Freek and {Rogers}, Alan and {Ros}, Eduardo and {Rose}, Mel and {Roshanineshat}, Arash and {Rottmann}, Helge and {Roy}, Alan L. and {Ruszczyk}, Chet and {Ryan}, Benjamin R. and {Rygl}, Kazi L.~J. and {S{\'a}nchez}, Salvador and {S{\'a}nchez-Arguelles}, David and {Sasada}, Mahito and {Savolainen}, Tuomas and {Schloerb}, F. Peter and {Schuster}, Karl-Friedrich and {Shao}, Lijing and {Shen}, Zhiqiang and {Small}, Des and {Sohn}, Bong Won and {SooHoo}, Jason and {Tazaki}, Fumie and {Tiede}, Paul and {Tilanus}, Remo P.~J. and {Titus}, Michael and {Toma}, Kenji and {Torne}, Pablo and {Trent}, Tyler and {Trippe}, Sascha and {Tsuda}, Shuichiro and {van Bemmel}, Ilse and {van Langevelde}, Huib Jan and {van Rossum}, Daniel R. and {Wagner}, Jan and {Wardle}, John and {Weintroub}, Jonathan and {Wex}, Norbert and {Wharton}, Robert and {Wielgus}, Maciek and {Wong}, George N. and {Wu}, Qingwen and {Young}, Andr{\'e} and {Young}, Ken and {Younsi}, Ziri and {Yuan}, Feng and {Yuan}, Ye-Fei and {Zensus}, J. Anton and {Zhao}, Guangyao and {Zhao}, Shan-Shan and {Zhu}, Ziyan and {Farah}, Joseph R. and {Meyer-Zhao}, Zheng and {Michalik}, Daniel and {Nadolski}, Andrew and {Nishioka}, Hiroaki and {Pradel}, Nicolas and {Primiani}, Rurik A. and {Souccar}, Kamal and {Vertatschitsch}, Laura and {Yamaguchi}, Paul},
+        title = "{First M87 Event Horizon Telescope Results. VI. The Shadow and Mass of the Central Black Hole}",
+      journal = {\apjl},
+     keywords = {black hole physics, galaxies: individual: M87, gravitation, techniques: high angular resolution, techniques: interferometric, Astrophysics - Astrophysics of Galaxies, Astrophysics - High Energy Astrophysical Phenomena, General Relativity and Quantum Cosmology},
+         year = 2019,
+        month = apr,
+       volume = {875},
+       number = {1},
+          eid = {L6},
+        pages = {L6},
+          doi = {10.3847/2041-8213/ab1141},
+archivePrefix = {arXiv},
+       eprint = {1906.11243},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019ApJ...875L...6E},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{themis,
+       author = {{Broderick}, Avery E. and {Gold}, Roman and {Karami}, Mansour and {Preciado-L{\'o}pez}, Jorge A. and {Tiede}, Paul and {Pu}, Hung-Yi and {Akiyama}, Kazunori and {Alberdi}, Antxon and {Alef}, Walter and {Asada}, Keiichi and {Azulay}, Rebecca and {Baczko}, Anne-Kathrin and {Balokovi{\'c}}, Mislav and {Barrett}, John and {Bintley}, Dan and {Blackburn}, Lindy and {Boland}, Wilfred and {Bouman}, Katherine L. and {Bower}, Geoffrey C. and {Bremer}, Michael and {Brinkerink}, Christiaan D. and {Brissenden}, Roger and {Britzen}, Silke and {Broguiere}, Dominique and {Bronzwaer}, Thomas and {Byun}, Do-Young and {Carlstrom}, John E. and {Chael}, Andrew and {Chatterjee}, Shami and {Chatterjee}, Koushik and {Chen}, Ming-Tang and {Chen}, Yongjun and {Cho}, Ilje and {Conway}, John E. and {Cordes}, James M. and {Crew}, Geoffrey B. and {Cui}, Yuzhu and {Davelaar}, Jordy and {De Laurentis}, Mariafelicia and {Deane}, Roger and {Dempsey}, Jessica and {Desvignes}, Gregory and {Doeleman}, Sheperd S. and {Eatough}, Ralph P. and {Falcke}, Heino and {Fish}, Vincent L. and {Fomalont}, Ed and {Fraga-Encinas}, Raquel and {Friberg}, Per and {Fromm}, Christian M. and {Galison}, Peter and {Gammie}, Charles F. and {Garc{\'\i}a}, Roberto and {Gentaz}, Olivier and {Georgiev}, Boris and {Goddi}, Ciriaco and {G{\'o}mez}, Jos{\'e} L. and {Gu}, Minfeng and {Gurwell}, Mark and {Hada}, Kazuhiro and {Hecht}, Michael H. and {Hesper}, Ronald and {Ho}, Luis C. and {Ho}, Paul and {Honma}, Mareki and {Huang}, Chih-Wei L. and {Huang}, Lei and {Hughes}, David H. and {Inoue}, Makoto and {Issaoun}, Sara and {James}, David J. and {Janssen}, Michael and {Jeter}, Britton and {Jiang}, Wu and {Jim{\'e}nez-Rosales}, Alejandra and {Johnson}, Michael D. and {Jorstad}, Svetlana and {Jung}, Taehyun and {Karuppusamy}, Ramesh and {Kawashima}, Tomohisa and {Keating}, Garrett K. and {Kettenis}, Mark and {Kim}, Jae-Young and {Kim}, Jongsoo and {Kino}, Motoki and {Koay}, Jun Yi and {Koch}, Patrick M. and {Koyama}, Shoko and {Kramer}, Michael and {Kramer}, Carsten and {Krichbaum}, Thomas P. and {Kuo}, Cheng-Yu and {Lee}, Sang-Sung and {Li}, Yan-Rong and {Li}, Zhiyuan and {Lindqvist}, Michael and {Lico}, Rocco and {Liu}, Kuo and {Liuzzo}, Elisabetta and {Lo}, Wen-Ping and {Lobanov}, Andrei P. and {Loinard}, Laurent and {Lonsdale}, Colin and {Lu}, Ru-Sen and {MacDonald}, Nicholas R. and {Mao}, Jirong and {Marscher}, Alan P. and {Mart{\'\i}-Vidal}, Iv{\'a}n and {Matsushita}, Satoki and {Matthews}, Lynn D. and {Menten}, Karl M. and {Mizuno}, Yosuke and {Mizuno}, Izumi and {Moran}, James M. and {Moriyama}, Kotaro and {Moscibrodzka}, Monika and {M{\"u}ller}, Cornelia and {Nagai}, Hiroshi and {Nagar}, Neil M. and {Nakamura}, Masanori and {Narayan}, Ramesh and {Narayanan}, Gopal and {Natarajan}, Iniyan and {Neri}, Roberto and {Ni}, Chunchong and {Noutsos}, Aristeidis and {Okino}, Hiroki and {Olivares}, H{\'e}ctor and {Ortiz-Le{\'o}n}, Gisela N. and {Oyama}, Tomoaki and {Palumbo}, Daniel C.~M. and {Park}, Jongho and {Pen}, Ue-Li and {Pesce}, Dominic W. and {Pi{\'e}tu}, Vincent and {Plambeck}, Richard and {PopStefanija}, Aleksandar and {Porth}, Oliver and {Prather}, Ben and {Ramakrishnan}, Venkatessh and {Rao}, Ramprasad and {Rawlings}, Mark G. and {Raymond}, Alexander W. and {Rezzolla}, Luciano and {Ripperda}, Bart and {Roelofs}, Freek and {Rogers}, Alan and {Ros}, Eduardo and {Rose}, Mel and {Rottmann}, Helge and {Ruszczyk}, Chet and {Ryan}, Benjamin R. and {Rygl}, Kazi L.~J. and {S{\'a}nchez}, Salvador and {S{\'a}nchez-Arguelles}, David and {Sasada}, Mahito and {Savolainen}, Tuomas and {Schloerb}, F. Peter and {Schuster}, Karl-Friedrich and {Shao}, Lijing and {Shen}, Zhiqiang and {Small}, Des and {Sohn}, Bong Won and {SooHoo}, Jason and {Tazaki}, Fumie and {Tilanus}, Remo P.~J. and {Titus}, Michael and {Toma}, Kenji and {Torne}, Pablo and {Traianou}, Efthalia and {Trippe}, Sascha and {Tsuda}, Shuichiro and {van Bemmel}, Ilse and {van Langevelde}, Huib Jan and {van Rossum}, Daniel R. and {Wagner}, Jan and {Wardle}, John and {Weintroub}, Jonathan and {Wex}, Norbert and {Wharton}, Robert and {Wielgus}, Maciek and {Wong}, George N. and {Wu}, Qingwen and {Yoon}, Doosoo and {Young}, Andr{\'e} and {Young}, Ken and {Younsi}, Ziri and {Yuan}, Feng and {Yuan}, Ye-Fei and {Zensus}, J. Anton and {Zhao}, Guangyao and {Zhao}, Shan-Shan and {Zhu}, Ziyan and {Event Horizon Telescope Collaboration}},
+        title = "{THEMIS: A Parameter Estimation Framework for the Event Horizon Telescope}",
+      journal = {\apj},
+     keywords = {565, 1647, 1858, 1769, 98},
+         year = 2020,
+        month = jul,
+       volume = {897},
+       number = {2},
+          eid = {139},
+        pages = {139},
+          doi = {10.3847/1538-4357/ab91a4},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...897..139B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
