--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -26,6 +26,42 @@
   organization={PMLR}
 }
 
+@ARTICLE{chael2018,
+       author = {{Chael}, Andrew A. and {Johnson}, Michael D. and {Bouman}, Katherine L. and {Blackburn}, Lindy L. and {Akiyama}, Kazunori and {Narayan}, Ramesh},
+        title = "{Interferometric Imaging Directly with Closure Phases and Closure Amplitudes}",
+      journal = {\apj},
+     keywords = {accretion, accretion disks, black hole physics, Galaxy: center, techniques: high angular resolution, techniques: image processing, Astrophysics - Instrumentation and Methods for Astrophysics, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2018,
+        month = apr,
+       volume = {857},
+       number = {1},
+          eid = {23},
+        pages = {23},
+          doi = {10.3847/1538-4357/aab6a8},
+archivePrefix = {arXiv},
+       eprint = {1803.07088},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018ApJ...857...23C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+@ARTICLE{Hamaker,
+       author = {{Hamaker}, J.~P. and {Bregman}, J.~D. and {Sault}, R.~J.},
+        title = "{Understanding radio polarimetry. I. Mathematical foundations.}",
+      journal = {\aaps},
+     keywords = {METHODS: ANALYTICAL, METHODS: DATA ANALYSIS, TECHNIQUES: INTERFEROMETERS, TECHNIQUES: POLARIMETERS},
+         year = 1996,
+        month = may,
+       volume = {117},
+        pages = {137-147},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1996A&AS..117..137H},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{EHTCI,
        author = {{Event Horizon Telescope Collaboration}},
         title = "{First M87 Event Horizon Telescope Results. I. The Shadow of the Supermassive Black Hole}",
