--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -26,6 +26,29 @@
   organization={PMLR}
 }
 
+@ARTICLE{@dmc,
+       author = {{Pesce}, Dominic W.},
+        title = "{A D-term Modeling Code (DMC) for Simultaneous Calibration and Full-Stokes Imaging of Very Long Baseline Interferometric Data}",
+      journal = {\aj},
+     keywords = {Radio interferometry, Very long baseline interferometry, Polarimetry, Interferometry, 1346, 1769, 1278, 808, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2021,
+        month = apr,
+       volume = {161},
+       number = {4},
+          eid = {178},
+        pages = {178},
+          doi = {10.3847/1538-3881/abe3f8},
+archivePrefix = {arXiv},
+       eprint = {2102.03328},
+ primaryClass = {astro-ph.IM},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2021AJ....161..178P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
 @ARTICLE{chael2018,
        author = {{Chael}, Andrew A. and {Johnson}, Michael D. and {Bouman}, Katherine L. and {Blackburn}, Lindy L. and {Akiyama}, Kazunori and {Narayan}, Ramesh},
         title = "{Interferometric Imaging Directly with Closure Phases and Closure Amplitudes}",
@@ -155,7 +178,20 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@misc{gal,
+  author = {Saurabh},
+  title = {Galifray: Geometric Modelling and Parameter Estimation using Black hole Images for EHT including VLBI},
+  year = {2022},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  url = {https://github.com/Relativist1/Gallifray}
+}
 
-
-
-
+@misc{in,
+  author = {{Plavin} Alexander},
+  title = {InterferometricModels},
+  year = {2022},
+  publisher = {GitLab},
+  journal = {GitLab repository},
+  url = {https://gitlab.com/aplavin/InterferometricModels.jl}
+}
