--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -26,7 +26,7 @@
   organization={PMLR}
 }
 
-@ARTICLE{@dmc,
+@ARTICLE{dmc,
        author = {{Pesce}, Dominic W.},
         title = "{A D-term Modeling Code (DMC) for Simultaneous Calibration and Full-Stokes Imaging of Very Long Baseline Interferometric Data}",
       journal = {\aj},
@@ -188,7 +188,7 @@ archivePrefix = {arXiv},
 }
 
 @misc{in,
-  author = {{Plavin} Alexander},
+  author = {{Plavin}, Alexander},
   title = {InterferometricModels},
   year = {2022},
   publisher = {GitLab},
