--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -7,6 +7,24 @@
       primaryClass={cs.MS}
 }
 
+@ARTICLE{themaging,
+       author = {{Broderick}, Avery E. and {Pesce}, Dominic W. and {Tiede}, Paul and {Pu}, Hung-Yi and {Gold}, Roman},
+        title = "{Hybrid Very Long Baseline Interferometry Imaging and Modeling with THEMIS}",
+      journal = {\apj},
+     keywords = {Black Hole physics, Astronomy data modeling, Computational astronomy, Submillimeter astronomy, Long baseline interferometry, General relativity, 159, 1859, 293, 1647, 932, 641},
+         year = 2020,
+        month = jul,
+       volume = {898},
+       number = {1},
+          eid = {9},
+        pages = {9},
+          doi = {10.3847/1538-4357/ab9c1f},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...898....9B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @proceedings{Soss,
   title        = {{Soss: Declarative Probabilistic Programming via 
                    Runtime Code Generation}},
