--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -122,7 +122,7 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@software{NS,
+@software{ns,
   author       = {Miles Lucas and
                   Saranjeet Kaur and
                   Tor Erlend Fjelde and
