--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -7,6 +7,24 @@
       primaryClass={cs.MS}
 }
 
+@ARTICLE{celeste,
+       author = {{Regier}, Jeffrey and {Pamnany}, Kiran and {Giordano}, Ryan and {Thomas}, Rollin and {Schlegel}, David and {McAuliffe}, Jon and {Prabhat}},
+        title = "{Learning an Astronomical Catalog of the Visible Universe through Scalable Bayesian Inference}",
+      journal = {arXiv e-prints},
+     keywords = {Computer Science - Distributed, Parallel, and Cluster Computing, Astrophysics - Instrumentation and Methods for Astrophysics, Computer Science - Machine Learning, Statistics - Applications, Statistics - Machine Learning, 85A35 (Primary), 68W10, 62P35, J.2, D.1.3, G.3, I.2, D.2},
+         year = 2016,
+        month = nov,
+          eid = {arXiv:1611.03404},
+        pages = {arXiv:1611.03404},
+archivePrefix = {arXiv},
+       eprint = {1611.03404},
+ primaryClass = {cs.DC},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2016arXiv161103404R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @ARTICLE{themaging,
        author = {{Broderick}, Avery E. and {Pesce}, Dominic W. and {Tiede}, Paul and {Pu}, Hung-Yi and {Gold}, Roman},
         title = "{Hybrid Very Long Baseline Interferometry Imaging and Modeling with THEMIS}",
