update bib and metdata

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -7,6 +7,25 @@
       primaryClass={cs.MS}
 }
 
+@article{juliafast,
+      author = {Bezanson, Jeff and Chen, Jiahao and Chung, Benjamin and Karpinski, Stefan and Shah, Viral B. and Vitek, Jan and Zoubritzky, Lionel},
+      title = {Julia: Dynamism and Performance Reconciled by Design},
+      year = {2018},
+      issue_date = {November 2018},
+      publisher = {Association for Computing Machinery},
+      address = {New York, NY, USA},
+      volume = {2},
+      number = {OOPSLA},
+      url = {https://doi.org/10.1145/3276490},
+      doi = {10.1145/3276490},
+      abstract = {Julia is a programming language for the scientific community that combines features of productivity languages, such as Python or MATLAB, with characteristics of performance-oriented languages, such as C++ or Fortran. Julia's productivity features include: dynamic typing, automatic memory management, rich type annotations, and multiple dispatch. At the same time, Julia allows programmers to control memory layout and leverages a specializing just-in-time compiler to eliminate much of the overhead of those features. This paper details the design choices made by the creators of Julia and reflects on the implications of those choices for performance and usability.},
+      journal = {Proc. ACM Program. Lang.},
+      month = {oct},
+      articleno = {120},
+      numpages = {23},
+      keywords = {just-in-time compilation, dynamic languages, multiple dispatch}
+}
+
 @ARTICLE{celeste,
        author = {{Regier}, Jeffrey and {Pamnany}, Kiran and {Giordano}, Ryan and {Thomas}, Rollin and {Schlegel}, David and {McAuliffe}, Jon and {Prabhat}},
         title = "{Learning an Astronomical Catalog of the Visible Universe through Scalable Bayesian Inference}",
